# devops-in-python

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
docs/: click.md  pytest.md  ruff.md  step-1.md  step-2.md  step-3.md  step-4.md  uv.md
src/simple_http_checker/: checker.py  cli.py
tests/: test_checker.py  test_cli.py  test_logging.py
