[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "requests>=2.32.5",
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_http_checker"]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
