[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "requests>=2.32.5",
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_http_checker"]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "__pycache__", "build", "dist"]

